--- a/КПиЯП/Гончаров Матвей 2 семестр/Create_Object_21vek_laptop_n/Create_Object_21vek_laptop_n/MainWindow.xaml
+++ b/КПиЯП/Гончаров Матвей 2 семестр/Create_Object_21vek_laptop_n/Create_Object_21vek_laptop_n/MainWindow.xaml
@@ -32,15 +32,46 @@
             <Grid Width="126">
                 <CheckBox Content="1920x1080" HorizontalAlignment="Left" Margin="0,21,0,0" VerticalAlignment="Top" Width="126" Checked="CheckBox_Checked_1"/>
                 <CheckBox Content="1440x1600" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.495,1.74" Margin="0,51,0,0"/>
-                <CheckBox Content="CheckBox" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.495,1.74" Margin="0,81,0,0"/>
+                <CheckBox Content="1600x900" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.495,1.74" Margin="0,81,0,0"/>
             </Grid>
         </Expander>
         <Expander HorizontalAlignment="Left" Height="149" Header="Процессор" Margin="681,264,0,0" VerticalAlignment="Top" Width="98" IsExpanded="True">
             <Grid Width="126">
-                <CheckBox Content="CheckBox" HorizontalAlignment="Left" Margin="0,21,0,0" VerticalAlignment="Top" Width="126"/>
-                <CheckBox Content="CheckBox" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.495,1.74" Margin="0,51,0,0"/>
-                <CheckBox Content="CheckBox" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.495,1.74" Margin="0,81,0,0"/>
+                <CheckBox Content="Amd Ryzen" HorizontalAlignment="Left" Margin="0,21,0,0" VerticalAlignment="Top" Width="126"/>
+                <CheckBox Content="Intel" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.495,1.74" Margin="0,51,0,0"/>
+                <CheckBox Content="Pentium" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.495,1.74" Margin="0,81,0,0"/>
             </Grid>
         </Expander>
+        <Grid Margin="0,0,261,0">
+            <GridSplitter Height="45" Margin="-5,30,0,0" VerticalAlignment="Top" Width="544" Opacity="0.8" HorizontalAlignment="Left" DragDelta="GridSplitter_DragDelta">
+                <GridSplitter.OpacityMask>
+                    
+                        <LinearGradientBrush>
+                        <LinearGradientBrush.GradientStops>
+                            <GradientStop Color="Black" Offset="0"/>
+                        <GradientStop Color="#FFAF0CFF" Offset="1"/>
+                            </LinearGradientBrush.GradientStops>
+                    </LinearGradientBrush>
+                </GridSplitter.OpacityMask>
+                <GridSplitter.BorderBrush>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="Black"/>
+                        <GradientStop Color="#FFC713F1" Offset="1"/>
+                    </LinearGradientBrush>
+                </GridSplitter.BorderBrush>
+                <GridSplitter.Background>
+                    <LinearGradientBrush >
+                        <GradientStop Color="#FF891D85"/>
+                        <GradientStop Color="#FFF10D71" Offset="0.444"/>
+                    </LinearGradientBrush>
+                </GridSplitter.Background>
+                <GridSplitter.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="Black"/>
+                        <GradientStop Color="#FFE916F5" Offset="1"/>
+                    </LinearGradientBrush>
+                </GridSplitter.Foreground>
+            </GridSplitter>
+        </Grid>
     </Grid>
 </Window>
