--- a/КПиЯП/Гончаров Матвей 2 семестр/database_gui/database_gui/MainWindow.xaml
+++ b/КПиЯП/Гончаров Матвей 2 семестр/database_gui/database_gui/MainWindow.xaml
@@ -7,6 +7,12 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid Margin="10,10,250,269">
+            <Label Content="Label" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+            <TextBox Name="textBoxNameDatabase" HorizontalAlignment="Left" Margin="73,14,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+            <Button Content="Button" HorizontalAlignment="Left" Margin="220,13,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+            <TextBox Name="boxConnectInfo" HorizontalAlignment="Left" Margin="270,0,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Center" Width="260" Height="135"/>
+        </Grid>
+
     </Grid>
 </Window>
